<resources>
    <string name="app_name">MySpeed</string>
    <string name="title_download">下载</string>
    <string name="title_market">市场</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_pan_download">网盘下载</string>
    <string name="title_url">链接</string>

    <string name="title_file_name">文件名称</string>
    <string name="title_avg_speed">均速</string>
    <string name="title_time">用时</string>
    <string name="title_size">大小</string>


    <string name="title_stop">暂停</string>
    <string name="title_continue">继续</string>

    <string name="title_pan">网盘</string>
    <string name="title_dialog_add">添加下载任务</string>

    <string name="title_downloading">下载中</string>
    <string name="title_finished">已完成</string>


    <string name="title_see_persons">查看人数</string>
    <string name="title_shard_file_name">栈上的文件名</string>
    <string name="title_create_time">发表时间</string>

    <string name="title_message_menu">消息</string>
    <string name="title_activity_message">MessageActivity</string>

    <string name="tab_text_remind">提醒</string>
    <string name="tab_text_conversation">提醒</string>

    <string name="text_remind_detail">提醒内容</string>
    <string name="text_remind_time">时间</string>
</resources>
