<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_item_finished"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/name_cv_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/title_file_name"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/avgspeed_cv_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/avgspeed_cv_tv"
                android:layout_width="154dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/title_avg_speed"
                app:layout_constraintStart_toStartOf="@+id/name_cv_tv"
                app:layout_constraintTop_toBottomOf="@+id/name_cv_tv" />

            <TextView
                android:id="@+id/times_cv_tv"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:text="@string/title_time"
                app:layout_constraintBottom_toBottomOf="@+id/avgspeed_cv_tv"
                app:layout_constraintEnd_toEndOf="@+id/name_cv_tv"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/avgspeed_cv_tv"
                app:layout_constraintTop_toTopOf="@+id/avgspeed_cv_tv" />

            <TextView
                android:id="@+id/size_cv_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/title_size"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="@+id/times_cv_tv"
                app:layout_constraintStart_toStartOf="@+id/avgspeed_cv_tv"
                app:layout_constraintTop_toBottomOf="@+id/avgspeed_cv_tv" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="88dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_action_download" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="125dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>