<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout4"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="107dp" />

    <TextView
        android:id="@+id/watchpers_tv"
        android:layout_width="73dp"
        android:layout_height="33dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/title_see_persons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/watchpers_icon_iv"
        app:layout_constraintStart_toStartOf="@+id/watchpers_icon_iv"
        app:layout_constraintTop_toBottomOf="@+id/watchpers_icon_iv" />

    <TextView
        android:id="@+id/shared_name_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/star_level_iv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/title_shard_file_name" />

    <ImageView
        android:id="@+id/watchpers_icon_iv"
        android:layout_width="41dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_plus" />

    <ImageView
        android:id="@+id/star_level_iv"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/watchpers_tv"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <TextView
        android:id="@+id/create_time_tv"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/title_create_time"
        app:layout_constraintBottom_toBottomOf="@+id/star_level_iv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/star_level_iv"
        app:layout_constraintTop_toTopOf="@+id/star_level_iv" />
</androidx.constraintlayout.widget.ConstraintLayout>